// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile should match a snapshot when submitChecksFormState is PENDING 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerResponsive
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <H3>
        Ms Saoirse Chadwick
      </H3>
      <div>
        RPS Reference: 
        MKC16000098
      </div>
    </div>
    <div>
      <ProfileToggle
        complete={true}
        key="Personal Details"
        title="Personal Details"
      >
        <ProfileInformationWithRedux />
      </ProfileToggle>
      <ProfileToggle
        complete={true}
        key="Primary ID"
        title="Primary ID"
      >
        <Connect(Component) />
      </ProfileToggle>
      <ProfileToggle
        complete={true}
        key="Secondary ID"
        title="Secondary ID"
      >
        <Connect(Component) />
      </ProfileToggle>
      <ProfileToggle
        complete={true}
        key="Address History"
        title="Address History"
      >
        <AddressInformationWithRedux />
      </ProfileToggle>
      <ProfileToggle
        complete={false}
        key="Agent checks"
        title="Agent checks"
      >
        <AgentCheckWithRedux />
      </ProfileToggle>
    </div>
    <div
      className="flex justify-end mt-10"
    >
      <Button
        disabled={false}
        loading={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Submit Record for Checks
      </Button>
    </div>
  </FlexContainerResponsive>
</Connect(ErrorBoundary)>
`;

exports[`Profile should match a snapshot when submitChecksFormState is SUBMITTING 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerResponsive
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <H3>
        Ms Saoirse Chadwick
      </H3>
      <div>
        RPS Reference: 
        MKC16000098
      </div>
    </div>
    <div>
      <ProfileToggle
        complete={true}
        key="Personal Details"
        title="Personal Details"
      >
        <ProfileInformationWithRedux />
      </ProfileToggle>
      <ProfileToggle
        complete={true}
        key="Primary ID"
        title="Primary ID"
      >
        <Connect(Component) />
      </ProfileToggle>
      <ProfileToggle
        complete={true}
        key="Secondary ID"
        title="Secondary ID"
      >
        <Connect(Component) />
      </ProfileToggle>
      <ProfileToggle
        complete={true}
        key="Address History"
        title="Address History"
      >
        <AddressInformationWithRedux />
      </ProfileToggle>
      <ProfileToggle
        complete={false}
        key="Agent checks"
        title="Agent checks"
      >
        <AgentCheckWithRedux />
      </ProfileToggle>
    </div>
    <div
      className="flex justify-end mt-10"
    >
      <Button
        disabled={true}
        loading={true}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Submit Record for Checks
      </Button>
    </div>
  </FlexContainerResponsive>
</Connect(ErrorBoundary)>
`;

exports[`Profile should match a snapshot when submitChecksFormState is SUCCESS 1`] = `
<Redirect
  to="/checklist-detail/:id/success"
/>
`;
